--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-input-mask": "^2.0.4",
-    "react-text-mask": "^5.5.0"
+    "react-text-mask": "^5.5.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.5",
     "@types/react-text-mask": "^5.4.14",
+    "@types/validator": "^13.12.0",
     "postcss": "^8",
     "sass": "^1.77.6",
     "tailwindcss": "^3.4.1",
